antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__subagent_mode_after_resume.snap
---
source: tui/src/chatwidget/tests/subagent_mode_tests.rs
expression: "render_bottom_popup(&resumed, 80)"
---
 ┃ Ask Antex to do anything

  gpt-5.2 default · /tmp/thread-settings · 
