antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__subagent_mode_enabled.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "render_bottom_popup(&chat, 80)"
---
 ┃ Ask Antex to do anything

  gpt-5.6-sol default · /tmp/project · 
