antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__subagents_armed_composer.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "render_bottom_popup(&chat, 80)"
---
 ┃ Subagents · next prompt

  gpt-5.6-sol default · /tmp/project
