antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__task_mention_transcript.snap
---
source: tui/src/chatwidget/tests/composer_submission.rs
expression: rendered
---

 ┃ Inspect @Review database migration
