antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__unified_exec_begin_restores_working_status.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 535
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Working (0s • esc to interrupt) · 1 background terminal running · /ps to view…"
"                                                                                "
"                                                                                "
" ┃ Ask Antex to do anything                                                     "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
