antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__unified_exec_wait_after_final_agent_message.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
• Waited for background terminal · cargo test -p antex-core

• Final response.
